Fix scrollbar color

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -382,6 +382,41 @@ h6:hover .anchor {
     user-select: none;
 }
 
+.post-content :not(table) ::-webkit-scrollbar-thumb {
+    border: 2px solid rgba(249, 249, 249, 1.0);
+    background: rgba(192, 192, 192, 1.0)
+}
+
+.post-content :not(table) ::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.56)
+}
+
+.dark .post-content :not(table) ::-webkit-scrollbar-thumb {
+    border: 2px solid var(--hljs-bg);
+    background: rgba(255, 255, 255, 0.32);
+}
+
+.post-content :not(table) ::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.56);
+}
+
+.dark .post-content :not(table) ::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.56)
+}
+
+.gist table::-webkit-scrollbar-thumb {
+    border: 2px solid rgb(255, 255, 255);
+    background: rgba(0, 0, 0, 0.32);
+}
+
+.gist table::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.56);
+}
+
+.post-content table::-webkit-scrollbar-thumb {
+    border-width: 2px;
+}
+
 .paginav {
     display: flex;
     line-height: 30px;
